--- a/src/app/main/contract-signature/components/consider-contract/image-dialog-sign/image-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/image-dialog-sign/image-dialog-sign.component.html
@@ -6,15 +6,18 @@
     <div class="name-item">
       <div class="confirm-radio d-flex justify-content-between mx-4">
         <div class="radio-confirm">
-          <input id="radio-file-account" type="radio" name="choose-radio-signature" [value]="1" [(ngModel)]='typeImageSignatureRadio' (change)="t(1)">
+          <input id="radio-file-account" type="radio" name="choose-radio-signature" [value]="1"
+            [(ngModel)]='typeImageSignatureRadio' (change)="t(1)">
           <label for="radio-file-account" class="ms-2">File chữ ký từ tài khoản</label>
         </div>
         <div class="radio-confirm">
-          <input id="radio-file-com" type="radio" name='choose-radio-signature' [value]="2" [(ngModel)]='typeImageSignatureRadio' (change)="t(2)">
+          <input id="radio-file-com" type="radio" name='choose-radio-signature' [value]="2"
+            [(ngModel)]='typeImageSignatureRadio' (change)="t(2)">
           <label for="radio-file-com" class="ms-2">Tải file ảnh chữ ký</label>
         </div>
         <div class="radio-confirm">
-          <input id="radio-img-draw" type="radio" name='choose-radio-signature' [value]="3" [(ngModel)]='typeImageSignatureRadio' (change)="t(3)">
+          <input id="radio-img-draw" type="radio" name='choose-radio-signature' [value]="3"
+            [(ngModel)]='typeImageSignatureRadio' (change)="t(3)">
           <label for="radio-img-draw" class="ms-2">Ký bằng hình vẽ tay</label>
         </div>
       </div>
@@ -24,16 +27,11 @@
 
       <div *ngIf="typeImageSignatureRadio == 1">
         <label class="align-select">Chữ ký đã tạo trên hệ thống:</label>
-        <!--<div class="select-signature-acc align-select mt-2">
-          <ngx-select [items]="optionsFileSignAccount" [placeholder]="'Chọn file ký đã upload'"
-                      optionValueField="id" optionTextField="name"
-                      (selectionChanges)="chooseImageSignAcc($event)"
-
-          ></ngx-select>
-        </div>-->
-
         <div class="image-sign-acc-2 mt-4 d-flex justify-content-center align-items-center" style="max-height: 600px;">
           <img *ngIf="imgSignAccountSelect" [src]="imgSignAccountSelect" alt="" style="max-height: 600px;">
+          <div *ngIf="!datas.imgSignAcc" style="margin-top: 12rem;">
+            Dữ liệu trống!
+          </div>
         </div>
       </div>
       <div *ngIf="typeImageSignatureRadio == 2">
@@ -42,7 +40,7 @@
             <div class="file-approve">
               <div class="label_item">File đính kèm:</div>
               <input id="attachFileSignature" type="file" accept=".jpg, .png, .jpge"
-                     (change)="fileChangedAttach($event)" style="display: none;">
+                (change)="fileChangedAttach($event)" style="display: none;">
               <div class="select-contract container-img-file" (click)="addFileAttach()">
                 <div class="upload-image-region d-flex flex-column container-img-file-1">
                   <img src="assets/img/img-icon.svg" alt="#" width="50px">
@@ -54,11 +52,13 @@
           </div>
         </div>
         <div class="image-sign-acc-2 mt-4" style="max-height: 600px;">
-          <img *ngIf="imgSignPCSelect" (click)="addFileAttach()" [src]="imgSignPCSelect" alt="" style="display: block;margin: 0 auto;max-height: 600px;">
+          <img *ngIf="imgSignPCSelect" (click)="addFileAttach()" [src]="imgSignPCSelect" alt=""
+            style="display: block;margin: 0 auto;max-height: 600px;">
         </div>
       </div>
       <div>
-        <signature-pad *ngIf="typeImageSignatureRadio == 3" #signature [options]="signaturePadOptions" (drawStart)="drawStart($event)" (drawEnd)="drawComplete($event)"></signature-pad>
+        <signature-pad *ngIf="typeImageSignatureRadio == 3" #signature [options]="signaturePadOptions"
+          (drawStart)="drawStart($event)" (drawEnd)="drawComplete($event)"></signature-pad>
 
       </div>
     </div>
@@ -67,9 +67,7 @@
     </div>
 
     <div class="select-option">
-      <button
-        class="dx-button-form dx-button-close dx-button-90 mb-4"
-        type="button" (click)="uploadImage()">OK
+      <button *ngIf="(typeImageSignatureRadio == 1 && datas.imgSignAcc) || (typeImageSignatureRadio != 1)" class="dx-button-form dx-button-close dx-button-90 mb-4" type="button" (click)="uploadImage()">OK
       </button>
     </div>
   </div>
