--- a/src/app/main/check-sign-digital/check-sign-digital.component.html
+++ b/src/app/main/check-sign-digital/check-sign-digital.component.html
@@ -5,7 +5,14 @@
         <button class="btn btn-lg btn-block btn_submit" (click)="addFileAttach()"><span class="fa fa-upload icon_add"></span> {{'sign.upload-file' | translate }}</button>
         <button class="btn btn-lg btn-block btn_label" *ngIf="this.fileName">{{fileName}}</button>
     </div>
-    <div class="row" style="padding-top: 20px;">
+    
+    <div *ngIf="totalRecord > 0" style="padding-top: 20px;">
+        <b>Hiệu lực văn bản: </b> 
+        <span *ngIf="isModified"><img src="../../../assets/img/icon_close.svg" width="16px" height="16px"> Nội dung văn bản đã bị thay đổi</span>
+        <span *ngIf="!isModified"><img src="../../../assets/img/icon_valid.svg" width="16px" height="16px"> Nội dung văn bản nguyên vẹn</span>
+    </div>
+
+    <div class="row" style="padding-top: 10px;">
         <p-table *ngIf="totalRecord > 0"  [value]="list" [paginator]="true" [rows]="15" id="table" [autoLayout]="true">
         <ng-template pTemplate="header" let-columns>
             <tr>
