--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -95,7 +95,7 @@
                 <div class="participants__name">
                   <div class="label_detail text-color">
                     <div>
-                      <input type="radio"/>
+                      <input type="radio" (change)="changeEmailPhone($event)" name="checkPhoneMailOrgSigner_{{index}}" [value]="0" checked/>
                     </div>&nbsp;
                     <div>
                       Ký bằng email
@@ -105,7 +105,7 @@
                 <div class="participants__name">
                   <div class="label_detail text-color">
                     <div>
-                      <input type="radio"/>
+                      <input type="radio" name="checkPhoneMailOrgSigner_{{index}}" (change)="changeEmailPhone($event)" [value]="1"/>
                     </div>&nbsp;
                     <div>
                       Ký bằng số điện thoại
@@ -234,7 +234,7 @@
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div>
-                        <input type="radio"/>
+                        <input name="checkPhoneMailOrgDoc_{{index}}" type="radio" (change)="changeEmailPhone($event)" checked/>
                       </div>&nbsp;
                       <div>
                         Ký bằng email
@@ -244,7 +244,7 @@
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div>
-                        <input type="radio"/>
+                        <input name="checkPhoneMailOrgDoc_{{index}}" type="radio" (change)="changeEmailPhone($event)"/>
                       </div>&nbsp;
                       <div>
                         Ký bằng số điện thoại
@@ -499,7 +499,7 @@
                     <div class="participants__name">
                       <div class="label_detail text-color">
                         <div>
-                          <input type="radio"/>
+                          <input name="checkPhoneMailParticipantSigner_{{index}}" type="radio" (change)="changeEmailPhone($event)" checked/>
                         </div>&nbsp;
                         <div>
                           Ký bằng email
@@ -509,7 +509,7 @@
                     <div class="participants__name">
                       <div class="label_detail text-color">
                         <div>
-                          <input type="radio"/>
+                          <input name="checkPhoneMailParticipantSigner_{{index}}" type="radio" (change)="changeEmailPhone($event)"/>
                         </div>&nbsp;
                         <div>
                           Ký bằng số điện thoại
@@ -640,7 +640,7 @@
                     <div class="participants__name">
                       <div class="label_detail text-color">
                         <div>
-                          <input type="radio"/>
+                          <input name="checkPhoneMailParticipantDoc_{{index}}" type="radio" (change)="changeEmailPhone($event)" checked/>
                         </div>&nbsp;
                         <div>
                           Ký bằng email
@@ -650,7 +650,7 @@
                     <div class="participants__name">
                       <div class="label_detail text-color">
                         <div>
-                          <input type="radio"/>
+                          <input name="checkPhoneMailParticipantDoc_{{index}}" type="radio" (change)="changeEmailPhone($event)"/>
                         </div>&nbsp;
                         <div>
                           Ký bằng số điện thoại
@@ -765,7 +765,7 @@
                     <div class="participants__name">
                       <div class="label_detail text-color">
                         <div>
-                          <input type="radio"/>
+                          <input name="checkPhoneMailPerson_{{index}}" type="radio" (change)="changeEmailPhone($event)" checked/>
                         </div>&nbsp;
                         <div>
                           Ký bằng email
@@ -775,7 +775,7 @@
                     <div class="participants__name">
                       <div class="label_detail text-color">
                         <div>
-                          <input type="radio"/>
+                          <input name="checkPhoneMailPerson_{{index}}" type="radio" (change)="changeEmailPhone($event)" />
                         </div>&nbsp;
                         <div>
                           Ký bằng số điện thoại
