--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -94,8 +94,9 @@
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label_detail text-color">
+
                     <div>
-                      <input type="radio" (change)="changeEmailPhone($event, index)" name="checkPhoneMailOrgSigner_{{index}}" value="0" checked/>
+                      <input type="radio" name="checkPhoneMailOrgSigner_{{index}}" [value]=0 [(ngModel)]="d.typeSign"/>
                     </div>&nbsp;
                     <div>
                       Ký bằng email
@@ -105,7 +106,7 @@
                 <div class="participants__name">
                   <div class="label_detail text-color">
                     <div>
-                      <input type="radio" name="checkPhoneMailOrgSigner_{{index}}" (change)="changeEmailPhone($event, index)" value="1"/>
+                      <input type="radio" name="checkPhoneMailOrgSigner_{{index}}" [(ngModel)]="d.typeSign" [value]=1/>
                     </div>&nbsp;
                     <div>
                       Ký bằng số điện thoại
@@ -133,13 +134,24 @@
                     </button>
                   </div>
                 </div>
-                <div *ngIf="this.arr[index] == 0 || this.flagInit[index] == true" class="participants__name">
+
+                <!--trường nhập email/số điện thoại cho người ký tổ chức của tôi-->
+                <div *ngIf="d.typeSign === 0" class="participants__name">
                   <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
                     <img src="assets/img/login_email.svg" class="input-img">
                     <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
                   </div>
                 </div>
+
+                <div *ngIf="d.typeSign == 1" class="participants__name">
+                  <div class="label_detail text-color">Số điện thoại&nbsp;<span class="required-title">*</span></div>
+                  <div class="input-data">
+                    <img src="assets/img/login_email.svg" class="input-img">
+                    <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.email">
+                  </div>
+                </div>
+
               </div>
 
               <div class="participants--input" style="display: flex">
@@ -169,11 +181,15 @@
                   </ng-multiselect-dropdown>
                 </div>
 
-                <div class="participants__name">
+                <div *ngIf="d.typeSign == 0" class="participants__name">
                   <div class="label_detail text-color">Số điện thoại&nbsp;<span *ngIf="getDataSignCka(d).length > 0" class="required-title">*</span>-&nbsp;<div style="color: #ffc107;">({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
                   <div class="input-data">
                     <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
                   </div>
+                </div>
+
+                <!--người ký tổ chức của tôi-->
+                <div *ngIf="d.typeSign == 1" class="participants__name">
                 </div>
                 <!--                <div *ngIf="getOtp(d)" class="participants-otp">-->
                 <!--                  <input type="checkbox" [value]="1" [(ngModel)]="d.is_otp" (ngModelChange)="changeOtp(d)">-->
@@ -234,7 +250,7 @@
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div>
-                        <input name="checkPhoneMailOrgDoc_{{index}}" type="radio" (change)="changeEmailPhone($event, index)" value="0" checked/>
+                        <input name="checkPhoneMailOrgDoc_{{index}}" type="radio" [(ngModel)]="d.typeSign" [value]=0/>
                       </div>&nbsp;
                       <div>
                         Ký bằng email
@@ -244,7 +260,7 @@
                   <div class="participants__name">
                     <div class="label_detail text-color">
                       <div>
-                        <input name="checkPhoneMailOrgDoc_{{index}}" type="radio" value="1" (change)="changeEmailPhone($event, index)"/>
+                        <input name="checkPhoneMailOrgDoc_{{index}}" type="radio" [value]=1 [(ngModel)]="d.typeSign"/>
                       </div>&nbsp;
                       <div>
                         Ký bằng số điện thoại
@@ -269,13 +285,24 @@
                     </button>
                   </div>
                 </div>
-                <div class="participants__name">
+
+                <!--văn thư-->
+                <div *ngIf="d.typeSign == 0" class="participants__name">
                   <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
                     <img src="assets/img/login_email.svg" class="input-img">
                     <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
                   </div>
                 </div>
+
+                <div *ngIf="d.typeSign == 1" class="participants__name">
+                  <div class="label_detail text-color">Số điện thoại&nbsp;<span class="required-title">*</span></div>
+                  <div class="input-data">
+                    <img src="assets/img/login_email.svg" class="input-img">
+                    <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.email">
+                  </div>
+                </div>
+
               </div>
 
               <div  class="participants--input" style="display: flex">
@@ -303,11 +330,14 @@
                   </ng-multiselect-dropdown>
                 </div>
 
-                <div class="participants__name">
+                <div *ngIf="d.typeSign == 0" class="participants__name">
                   <div class="label_detail text-color">Số điện thoại&nbsp;<span *ngIf="getDataSignCka(d).length > 0" class="required-title">*</span>-&nbsp;<div style="color: #ffc107;">({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
                   <div class="input-data">
                     <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
                   </div>
+                </div>
+
+                <div *ngIf="d.typeSign == 1" class="participants__name">
                 </div>
               </div>
 
@@ -499,7 +529,7 @@
                     <div class="participants__name">
                       <div class="label_detail text-color">
                         <div>
-                          <input name="checkPhoneMailParticipantSigner_{{index}}" type="radio" value="0"  (change)="changeEmailPhone($event, index)" checked/>
+                          <input name="checkPhoneMailParticipantSigner_{{index}}_{{id}}" type="radio" [value]=0 [(ngModel)]="d.typeSign"/>
                         </div>&nbsp;
                         <div>
                           Ký bằng email
@@ -509,7 +539,7 @@
                     <div class="participants__name">
                       <div class="label_detail text-color">
                         <div>
-                          <input name="checkPhoneMailParticipantSigner_{{index}}" type="radio" value="1" (change)="changeEmailPhone($event, index)"/>
+                          <input name="checkPhoneMailParticipantSigner_{{index}}_{{id}}" type="radio" [value]=1 [(ngModel)]="d.typeSign"/>
                         </div>&nbsp;
                         <div>
                           Ký bằng số điện thoại
@@ -528,13 +558,24 @@
                         placeholder="{{'nhap_ho_va_ten' | translate}}" [(ngModel)]="d.name">
                     </div>
                   </div>
-                  <div class="participants__name">
+
+                  <!--Người ký đối tác-->
+                  <div *ngIf="d.typeSign == 0" class="participants__name">
                     <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
                     <div class="input-data">
                       <img src="assets/img/login_email.svg" class="input-img">
                       <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
                     </div>
                   </div>
+
+                  <div *ngIf="d.typeSign == 1" class="participants__name">
+                    <div class="label_detail text-color">Số điện thoại&nbsp;<span class="required-title">*</span></div>
+                    <div class="input-data">
+                      <img src="assets/img/login_email.svg" class="input-img">
+                      <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.email">
+                    </div>
+                  </div>
+
                 </div>
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
@@ -572,22 +613,16 @@
                   <!--                    <input type="number" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.phone">-->
                   <!--                  </div>-->
 
-                  <div class="participants__name">
+                  <div *ngIf="d.typeSign == 0" class="participants__name">
                     <div class="label_detail text-color">Số điện thoại&nbsp;<span *ngIf="getDataSignCka(d).length > 0" class="required-title">*</span>-&nbsp;<div style="color: #ffc107;">({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
                     <div class="input-data">
                       <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
                     </div>
                   </div>
-                </div>
 
-                <!-- <div class="participants--input" style="display: flex" *ngIf="getDataSignEkyc(d).length > 0">
-                  <div class="participants__name" style="width: 90%">
-                    <div class="label_detail text-color">CMT/CCCD&nbsp;<span class="required-title">*</span></div>
-                    <div class="input-data">
-                      <input type="text" placeholder="{{'Nhập CMT/CCCD' | translate}}" [(ngModel)]="d.card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
-                    </div>
+                  <div *ngIf="d.typeSign == 1" class="participants__name">
                   </div>
-                </div> -->
+                </div>
 
                 <!--Check ký usb token cho đối tác, nếu có thì render trường mã số thuế/cccd-->
                 <div class="participants--input" style="display: flex" *ngIf="getDataSignUSBToken(d).length > 0">
@@ -640,7 +675,7 @@
                     <div class="participants__name">
                       <div class="label_detail text-color">
                         <div>
-                          <input name="checkPhoneMailParticipantDoc_{{index}}" type="radio" value="0" (change)="changeEmailPhone($event, index)" checked/>
+                          <input name="checkPhoneMailParticipantDoc_{{index}}" type="radio" [value]=0 [(ngModel)]="d.typeSign"/>
                         </div>&nbsp;
                         <div>
                           Ký bằng email
@@ -650,7 +685,7 @@
                     <div class="participants__name">
                       <div class="label_detail text-color">
                         <div>
-                          <input name="checkPhoneMailParticipantDoc_{{index}}" type="radio" value="1" (change)="changeEmailPhone($event, index)"/>
+                          <input name="checkPhoneMailParticipantDoc_{{index}}" type="radio" [value]=1 [(ngModel)]="d.typeSign" />
                         </div>&nbsp;
                         <div>
                           Ký bằng số điện thoại
@@ -672,13 +707,24 @@
                   <!--                    <input type="checkbox">-->
                   <!--                    <span class="label text-color">OTP</span>-->
                   <!--                  </div>-->
-                  <div class="participants__name">
+                  
+                  <!--Văn thư-->
+                  <div *ngIf="d.typeSign == 0" class="participants__name">
                     <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
                     <div class="input-data">
                       <img src="assets/img/login_email.svg" class="input-img">
                       <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
                     </div>
                   </div>
+
+                  <div *ngIf="d.typeSign == 1" class="participants__name">
+                    <div class="label_detail text-color">Số điện thoại&nbsp;<span class="required-title">*</span></div>
+                    <div class="input-data">
+                      <img src="assets/img/login_email.svg" class="input-img">
+                      <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.email">
+                    </div>
+                  </div>
+
                 </div>
 
                 <div class="participants--input" style="display: flex">
@@ -687,7 +733,7 @@
                       <!-- &nbsp;-&nbsp;<div style="color: #ffc107;">({{'Chỉ được chọn 1 kiểu ký số' | translate}})</div> -->
                     </div>
 
-                    <!--Đối tác là văn thư ký-->
+                    <!--Đối tác là văn thư chọn loại ký-->
                     <ng-multiselect-dropdown 
                       [(ngModel)]="d.sign_type" 
                       placeholder="{{'choose' | translate }}"
@@ -709,11 +755,14 @@
                     </ng-multiselect-dropdown>
                   </div>
 
-                  <div class="participants__name">
+                  <div *ngIf="d.typeSign == 0" class="participants__name">
                     <div class="label_detail text-color">Số điện thoại&nbsp;<span *ngIf="getDataSignCka(d).length > 0" class="required-title">*</span>-&nbsp;<div style="color: #ffc107;"> ({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
                     <div class="input-data">
                       <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
                     </div>
+                  </div>
+
+                  <div *ngIf="d.typeSign == 1" class="participants__name">
                   </div>
                 </div>
 
@@ -760,12 +809,12 @@
                 [(ngModel)]="d.ordering" [disabled]="getPartnerSignature(item).length == 1">
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column;margin-bottom: 14px">
 
-                  <!--Chọn ký bằng email hoặc số điện thoại-->
+                  <!--Chọn ký bằng email hoặc số điện thoại đối với người ký là cá nhân-->
                   <div class="participants--input" style="display: flex">
                     <div class="participants__name">
                       <div class="label_detail text-color">
                         <div>
-                          <input name="checkPhoneMailPerson_{{index}}" type="radio" value="0" (change)="changeEmailPhone($event, index)" checked/>
+                          <input name="checkPhoneMailPerson_{{index}}" type="radio" [value]=0 [(ngModel)]="d.typeSign"/>
                         </div>&nbsp;
                         <div>
                           Ký bằng email
@@ -775,7 +824,7 @@
                     <div class="participants__name">
                       <div class="label_detail text-color">
                         <div>
-                          <input name="checkPhoneMailPerson_{{index}}" type="radio" value="1" (change)="changeEmailPhone($event, index)" />
+                          <input name="checkPhoneMailPerson_{{index}}" type="radio" [value]=1 [(ngModel)]="d.typeSign"  />
                         </div>&nbsp;
                         <div>
                           Ký bằng số điện thoại
@@ -795,14 +844,25 @@
                         (change)="getName($event, item)">
                     </div>
                   </div>
-                  <div  class="participants__name">
+
+                  <div *ngIf="d.typeSign == 0" class="participants__name">
                     <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
                     <div class="input-data">
                       <img src="assets/img/login_email.svg" class="input-img">
                       <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
                     </div>
                   </div>
+
+                  <div *ngIf="d.typeSign == 1" class="participants__name">
+                    <div class="label_detail text-color">Số điện thoại&nbsp;<span class="required-title">*</span></div>
+                    <div class="input-data">
+                      <img src="assets/img/login_email.svg" class="input-img">
+                      <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
+                    </div>
+                  </div>
+
                 </div>
+
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">{{'user.sign-type' | translate}}&nbsp;<span
@@ -832,11 +892,14 @@
                     </ng-multiselect-dropdown>
                   </div>
 
-                  <div class="participants__name">
+                  <div *ngIf="d.typeSign == 0" class="participants__name">
                     <div class="label_detail text-color">Số điện thoại&nbsp;<span *ngIf="getDataSignCka(d).length > 0" class="required-title">*</span>-&nbsp;<div style="color: #ffc107;">({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
                     <div class="input-data">
                       <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
                     </div>
+                  </div>
+
+                  <div *ngIf="d.typeSign == 1" class="participants__name">
                   </div>
                   <!--                    <div *ngIf="getOtp(d)" class="participants-otp">-->
                   <!--                      <input type="checkbox" [value]="1" [(ngModel)]="d.is_otp" (ngModelChange)="changeOtp(d)">-->
