--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -33,7 +33,34 @@
               type="number" [(ngModel)]="d.ordering"
               oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
               [disabled]="getOriganzationReviewer().length == 1">
+
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
+
+                     <!--Chọn ký bằng email hoặc số điện thoại-->
+                     <div class="participants--input" style="display: flex">
+                      <div class="participants__name">
+                        <div class="label_detail text-color">
+      
+                          <div>
+                            <input type="radio" name="checkPhoneMailOrgReview_{{index}}" [value]=0 [(ngModel)]="d.typeSign"/>
+                          </div>&nbsp;
+                          <div>
+                            Ký bằng email
+                          </div>
+                        </div>
+                      </div>
+                      <div class="participants__name">
+                        <div class="label_detail text-color">
+                          <div>
+                            <input type="radio" name="checkPhoneMailOrgReview_{{index}}" [(ngModel)]="d.typeSign" [value]=1/>
+                          </div>&nbsp;
+                          <div>
+                            Ký bằng số điện thoại
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
                   <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span></div>
@@ -50,15 +77,25 @@
                     </button>
                   </div>
                 </div>
-                <div class="participants__name">
+
+                <div *ngIf="d.typeSign == 0" class="participants__name">
                   <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
                     <img src="assets/img/login_email.svg" class="input-img">
                     <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
                   </div>
                 </div>
+
+                <div *ngIf="d.typeSign == 1" class="participants__name">
+                  <div class="label_detail text-color">Số điện thoại&nbsp;<span class="required-title">*</span></div>
+                  <div class="input-data">
+                    <img src="assets/img/login_email.svg" class="input-img">
+                    <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.email">
+                  </div>
+                </div>
               </div>
-              <div class="participants--input" style="display: flex">
+
+              <div *ngIf="d.typeSign == 0" class="participants--input" style="display: flex">
                 <div class="participants__name" style="width: 90%">
                   <div class="label_detail text-color">Số điện thoại&nbsp;-&nbsp;<div style="color: #ffc107;">({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
                   <div class="input-data">
@@ -476,6 +513,31 @@
                 type="number" [(ngModel)]="d.ordering" [disabled]="getPartnerReviewer(item).length == 1"
                 oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column; margin-bottom: 14px">
+
+                  <!--Chọn ký bằng email hoặc số điện thoại-->
+                  <div class="participants--input" style="display: flex">
+                    <div class="participants__name">
+                      <div class="label_detail text-color">
+                        <div>
+                          <input name="checkPhoneMailParticipantReviewer_{{index}}_{{id}}" type="radio" [value]=0 [(ngModel)]="d.typeSign"/>
+                        </div>&nbsp;
+                        <div>
+                          Ký bằng email
+                        </div>
+                      </div>
+                    </div>
+                    <div class="participants__name">
+                      <div class="label_detail text-color">
+                        <div>
+                          <input name="checkPhoneMailParticipantReviewer_{{index}}_{{id}}" type="radio" [value]=1 [(ngModel)]="d.typeSign"/>
+                        </div>&nbsp;
+                        <div>
+                          Ký bằng số điện thoại
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
                 <div class="participants--input">
                   <div class="participants__name">
                     <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span></div>
@@ -484,16 +546,24 @@
                       <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" [(ngModel)]="d.name">
                     </div>
                   </div>
-                  <div class="participants__name">
+                  <div *ngIf="d.typeSign == 0" class="participants__name">
                     <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
                     <div class="input-data">
                       <img src="assets/img/login_email.svg" class="input-img">
                       <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="d.email">
                     </div>
                   </div>
+
+                  <div *ngIf="d.typeSign == 1" class="participants__name">
+                    <div class="label_detail text-color">Số điện thoại&nbsp;<span class="required-title">*</span></div>
+                    <div class="input-data">
+                      <img src="assets/img/login_email.svg" class="input-img">
+                      <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.email">
+                    </div>
+                  </div>
                 </div>
 
-                <div class="participants--input" style="display: flex">
+                <div *ngIf="d.typeSign == 0" class="participants--input" style="display: flex">
                   <div class="participants__name" style="width: 90%">
                     <div class="label_detail text-color">Số điện thoại&nbsp;-&nbsp;<div style="color: #ffc107;"> ({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
                     <div class="input-data">
@@ -675,7 +745,7 @@
                     <div class="participants__name">
                       <div class="label_detail text-color">
                         <div>
-                          <input name="checkPhoneMailParticipantDoc_{{index}}" type="radio" [value]=0 [(ngModel)]="d.typeSign"/>
+                          <input name="checkPhoneMailParticipantDoc_{{index}}_{{id}}" type="radio" [value]=0 [(ngModel)]="d.typeSign"/>
                         </div>&nbsp;
                         <div>
                           Ký bằng email
@@ -685,7 +755,7 @@
                     <div class="participants__name">
                       <div class="label_detail text-color">
                         <div>
-                          <input name="checkPhoneMailParticipantDoc_{{index}}" type="radio" [value]=1 [(ngModel)]="d.typeSign" />
+                          <input name="checkPhoneMailParticipantDoc_{{index}}_{{id}}" type="radio" [value]=1 [(ngModel)]="d.typeSign" />
                         </div>&nbsp;
                         <div>
                           Ký bằng số điện thoại
